# HWs

./: .gitignore
01 (news)/1 (lambda)/: 1 (lambda).cpp  1 (lambda).sln
01 (news)/2 (variant)/: 2 (variant).cpp  2 (variant).vcxproj  2 (variant).vcxproj.filters
01 (news)/3 (func)/: 3 (func).cpp  3 (func).sln
02 (errors)/1 (simple)/: 1 (simple).vcxproj.filters
03 (RAII)/1 (smart arr)/: 1 (smart arr).sln  1 (smart arr).vcxproj
03 (RAII)/2 (smart arr+)/: 2 (smart arr+).cpp  2 (smart arr+).sln
05 (templates and functor)/5.1 (pow)/: 5.1 (pow).cpp  5.1 (pow).vcxproj
05 (templates and functor)/5.2 (table)/: 5.2 (table).sln  5.2 (table).vcxproj  5.2 (table).vcxproj.filters
05 (templates and functor)/5.3 (functor)/: 5.3 (functor).cpp  5.3 (functor).vcxproj.filters
07 (STL container)/7.1/: 7.1.cpp
07 (STL container)/7.2/: 7.2.cpp  7.2.sln
08 (STL)/8.1 vector/: 8.1 vector.vcxproj
08 (STL)/8.2 print/: 8.2 print.sln  8.2 print.vcxproj.filters
10 (smart ptr)/10.1 (clone)/: 10.1 (clone).cpp  10.1 (clone).sln  10.1 (clone).vcxproj  10.1 (clone).vcxproj.filters
10 (smart ptr)/10.2 (memory cross)/: 10.2 (memory cross).cpp  10.2 (memory cross).sln
11 (move)/11.1 (vector move)/: 11.1 (vector move).cpp
11 (move)/11.2 (big value)/: 11.2 (big value).cpp
Final/: Final.sln
Final/Final/: Final.cpp  file.ini  ini_parser.cpp  ini_parser.h
Qt/10/: mainwindow.cpp  tcpclient.cpp
Qt/2/2_1/: CMakeLists.txt  main.cpp
Qt/3/: CMakeLists.txt  first.cpp  first.h  first.ui  main.cpp  mainwindow.ui
Qt/4/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
(+344 files in other folders)
